<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_scroll_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <EditText
            android:id="@+id/customer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_name"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <EditText
            android:id="@+id/customer_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/customer_email"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <EditText
            android:id="@+id/customer_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/customer_mobile_number"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/overall_rating_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overall_rating_text"
            android:textSize="18sp"
            android:layout_margin="10dp"/>
        <RatingBar
            android:id="@+id/overall_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:saveEnabled="true"/>

        <TextView
            android:id="@+id/comments_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comments_heading"
            android:textSize="18sp"
            android:layout_margin="10dp" />
        <EditText
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comments_text"
            android:inputType="textMultiLine"
            android:lines="5"
            android:gravity="top"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/submit_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="20sp"
            android:layout_margin="30dp"/>
    </LinearLayout>

</ScrollView>